# local-multimodal-infra

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.nvidia  LICENSE  README.en.md  README.md  docker-compose-nvidia.yml  docker-compose.yml
configs/: controller.yaml  docker-controller.yaml  docker-worker.yaml  worker.yaml
configs/models.d/: index-tts.yaml  mmarco-minilm-reranker.yaml  multilingual-e5-small.yaml  qwen-asr.yaml  sensevoice-asr.yaml  yolo.yaml
crates/adapter-e5-embedding/: Cargo.toml
crates/adapter-e5-embedding/src/: lib.rs
crates/adapter-index-tts/: Cargo.toml
crates/adapter-index-tts/src/: artifacts.rs  audio.rs  audio_quality.rs  config.rs  frontend.rs  lib.rs  normalization_rules.rs  onnx.rs  pipeline.rs  tests.rs  tokenizer.rs
crates/adapter-mmarco-reranker/: Cargo.toml
crates/adapter-mmarco-reranker/src/: lib.rs
crates/adapter-qwen-asr/: Cargo.toml
crates/adapter-qwen-asr/src/: audio.rs  features.rs  lib.rs  tests.rs
crates/adapter-sensevoice-asr/: Cargo.toml
crates/adapter-sensevoice-asr/src/: audio.rs  features.rs  lib.rs  speaker.rs  tests.rs  vad.rs
crates/adapter-yolo/: Cargo.toml
crates/adapter-yolo/src/: lib.rs
crates/api-mcp-admin/: Cargo.toml
crates/api-mcp-admin/src/: lib.rs
crates/api-mcp-infer/: Cargo.toml
crates/api-mcp-infer/src/: lib.rs
crates/api-openai/: Cargo.toml
crates/api-openai/src/: lib.rs
crates/backend-ort/: Cargo.toml
crates/backend-ort/src/: io_binding.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs  standard_mcp.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/files/: Cargo.toml
crates/files/src/: lib.rs
crates/hardware/: Cargo.toml
crates/hardware/src/: lib.rs
crates/model-store/: Cargo.toml
crates/model-store/src/: lib.rs  tests.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
docs/: implementation-notes.md  indextts-latency-benchmark.md
scripts/: __init__.py  indextts_export.py  indextts_text_parity.py  smoke_api_mcp.py
scripts/lcoal/: __init__.py  indextts_export.py  indextts_text_parity.py  mcp_standard_client.py  paths.py  processes.py  smoke.py
scripts/local/: __init__.py  benchmark_text_embeddings.py  e5_pooling_export.py  errors.py  http_client.py  indextts_export.py  indextts_text_parity.py  indextts_v2_parity.py  mcp_standard_client.py  paths.py  smoke.py  summarize_indextts_latency.py  test_indextts_export.py  test_summarize_indextts_latency.py
