[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/config",
    "crates/error",
    "crates/controller",
    "crates/worker",
    "crates/scheduler",
    "crates/runtime",
    "crates/registry",
    "crates/model-store",
    "crates/hardware",
    "crates/files",
    "crates/api-mcp-infer",
    "crates/api-mcp-admin",
    "crates/api-openai",
    "crates/backend-ort",
    "crates/adapter-index-tts",
    "crates/adapter-yolo",
    "crates/adapter-qwen-asr",
    "crates/telemetry",
    "crates/cli",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
publish = false

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
hound = "3.5"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }
ndarray = "0.15"
ort = { version = "2.0.0-rc.12", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.16.0", features = ["server", "transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sysinfo = "0.30"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net", "sync"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
