[package]
name = "local-adapter-e5-embedding"
edition.workspace = true
version.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["local-backend-ort/cuda"]
directml = ["local-backend-ort/directml"]
tensorrt = ["local-backend-ort/tensorrt"]

[dependencies]
half.workspace = true
local-backend-ort = { path = "../backend-ort" }
local-core = { path = "../core" }
local-error = { path = "../error" }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
