[package]
name = "local-adapter-sensevoice-asr"
edition.workspace = true
version.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["local-backend-ort/cuda"]
directml = ["local-backend-ort/directml"]
tensorrt = ["local-backend-ort/tensorrt"]

[dependencies]
hound.workspace = true
kaldi-native-fbank = "0.1.0"
local-backend-ort = { path = "../backend-ort" }
local-core = { path = "../core" }
local-error = { path = "../error" }
local-files = { path = "../files" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile = "3"
