[package]
name = "local-adapter-yolo"
edition.workspace = true
version.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["local-backend-ort/cuda"]
directml = ["local-backend-ort/directml"]
tensorrt = ["local-backend-ort/tensorrt"]

[dependencies]
image.workspace = true
local-backend-ort = { path = "../backend-ort" }
local-core = { path = "../core" }
local-error = { path = "../error" }
local-files = { path = "../files" }
serde_yaml.workspace = true
