[package]
name = "lcoal-api-mcp-admin"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
lcoal-core = { path = "../core" }
lcoal-error = { path = "../error" }
serde.workspace = true
serde_json.workspace = true
