[package]
name = "local-api-mcp-admin"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
local-core = { path = "../core" }
local-error = { path = "../error" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
