[package]
name = "lcoal-backend-ort"
edition.workspace = true
version.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["ort/cuda"]
directml = ["ort/directml"]
tensorrt = ["ort/tensorrt"]
ort-runtime = []

[dependencies]
lcoal-error = { path = "../error" }
half.workspace = true
ort = { workspace = true, features = ["std", "tracing", "download-binaries", "copy-dylibs", "tls-rustls", "api-24", "half"] }
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
