[package]
name = "local-cli"
edition.workspace = true
version.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["local-runtime/cuda"]
directml = ["local-runtime/directml"]
tensorrt = ["local-runtime/tensorrt"]

[dependencies]
axum.workspace = true
local-config = { path = "../config" }
local-controller = { path = "../controller" }
local-error = { path = "../error" }
local-model-store = { path = "../model-store" }
local-registry = { path = "../registry" }
local-runtime = { path = "../runtime" }
local-telemetry = { path = "../telemetry" }
local-worker = { path = "../worker" }
tokio.workspace = true
tracing.workspace = true

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "local-multimodal-infra"
path = "src/main.rs"
