[package]
name = "local-controller"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
hmac.workspace = true
local-api-mcp-admin = { path = "../api-mcp-admin" }
local-api-mcp-infer = { path = "../api-mcp-infer" }
local-api-openai = { path = "../api-openai" }
local-core = { path = "../core" }
local-error = { path = "../error" }
local-files = { path = "../files" }
local-model-store = { path = "../model-store" }
local-registry = { path = "../registry" }
local-scheduler = { path = "../scheduler" }
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
