[package]
name = "local-files"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
local-core = { path = "../core" }
local-error = { path = "../error" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
