[package]
name = "lcoal-model-store"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
lcoal-core = { path = "../core" }
lcoal-error = { path = "../error" }
reqwest.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
