[package]
name = "local-runtime"
edition.workspace = true
version.workspace = true
publish.workspace = true

[features]
default = []
cuda = [
    "local-adapter-index-tts/cuda",
    "local-adapter-qwen-asr/cuda",
    "local-adapter-yolo/cuda",
]
directml = [
    "local-adapter-index-tts/directml",
    "local-adapter-qwen-asr/directml",
    "local-adapter-yolo/directml",
]
tensorrt = [
    "local-adapter-index-tts/tensorrt",
    "local-adapter-qwen-asr/tensorrt",
    "local-adapter-yolo/tensorrt",
]

[dependencies]
local-adapter-index-tts = { path = "../adapter-index-tts" }
local-adapter-qwen-asr = { path = "../adapter-qwen-asr" }
local-adapter-yolo = { path = "../adapter-yolo" }
local-backend-ort = { path = "../backend-ort" }
local-core = { path = "../core" }
local-error = { path = "../error" }
tokio.workspace = true
tracing.workspace = true
