[package]
name = "local-runtime"
edition.workspace = true
version.workspace = true
publish.workspace = true

[features]
default = []
cuda = [
    "local-adapter-e5-embedding/cuda",
    "local-adapter-index-tts/cuda",
    "local-adapter-mmarco-reranker/cuda",
    "local-adapter-sensevoice-asr/cuda",
    "local-adapter-yolo/cuda",
]
directml = [
    "local-adapter-e5-embedding/directml",
    "local-adapter-index-tts/directml",
    "local-adapter-mmarco-reranker/directml",
    "local-adapter-sensevoice-asr/directml",
    "local-adapter-yolo/directml",
]
tensorrt = [
    "local-adapter-e5-embedding/tensorrt",
    "local-adapter-index-tts/tensorrt",
    "local-adapter-mmarco-reranker/tensorrt",
    "local-adapter-sensevoice-asr/tensorrt",
    "local-adapter-yolo/tensorrt",
]

[dependencies]
local-adapter-e5-embedding = { path = "../adapter-e5-embedding" }
local-adapter-index-tts = { path = "../adapter-index-tts" }
local-adapter-mmarco-reranker = { path = "../adapter-mmarco-reranker" }
local-adapter-sensevoice-asr = { path = "../adapter-sensevoice-asr" }
local-adapter-yolo = { path = "../adapter-yolo" }
local-backend-ort = { path = "../backend-ort" }
local-core = { path = "../core" }
local-error = { path = "../error" }
tokio.workspace = true
tracing.workspace = true
