[package]
name = "lcoal-worker"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
lcoal-core = { path = "../core" }
lcoal-error = { path = "../error" }
lcoal-hardware = { path = "../hardware" }
lcoal-registry = { path = "../registry" }
lcoal-runtime = { path = "../runtime" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
