[package]
name = "local-worker"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
local-core = { path = "../core" }
local-error = { path = "../error" }
local-hardware = { path = "../hardware" }
local-registry = { path = "../registry" }
local-runtime = { path = "../runtime" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
